<?xml version="1.0"?>
<package format="2">
  <name>caffe</name>
  <version>1.0.0</version>
  <description>https://github.com/BVLC/caffe</description>

  <maintainer email="forster@ifi.uzh.ch">cfo</maintainer>
  <license>BSD 2-Clause license</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>

  <export>
    <!-- Specify that this is not really a Catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>